# djboost

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt
djboost/: cli.py  generator.py
djboost/commands/: add_cicd.py  create_app.py  create_project.py  remove_cicd.py
djboost/generators/: __init__.py  cicd.py  dependencies.py  docker.py  env.py  project_files.py  quality.py  settings.py  validators.py
