[project]
name = "djboost"
version = "0.1.0"
description = "Django project generator CLI — production-ready Django projects in one command"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

authors = [
    { name = "Munjur Alom" }
]

dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0"
]

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Code Generators",
]

[project.urls]
Homepage = "https://github.com/munjuralom/djboost"
Repository = "https://github.com/munjuralom/djboost"
"Bug Tracker" = "https://github.com/munjuralom/djboost/issues"

[project.scripts]
djboost = "djboost.cli:app"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["djboost*"]